Made XQuery pool settings configurable.
svn path=/trunk/eXist-1.0/; revision=1003


Former-commit-id: a9cc1514d5b20fec6837d5f1ca19ebea42741a27